<resources>
    <string name="app_name" translatable="false">Room Remix</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="furniture_dimensions">Furniture Dimensions</string>
    <string name="length">Length</string>
    <string name="height">Height</string>
    <string name="done">Done</string>

        <string name="brush_button">Brush Button</string>
        <string name="rotate_button" tools:ignore="ExtraTranslation">Rotate Button</string>
        <string name="color_palette">Color Palette</string>
        <string name="image_background">Image background</string>
        <string name="background_image_button">Image Button</string>
        <string name="error_parsing">Error parsing image or it\'s corrupted.</string>
        <string name="undo_draw_button">Undo Draw Button</string>
        <string name="option_save_drawing">Save Drawing</string>
        <string name="share_drawing_button">Share Drawing Button</string>
        <string name="erase_draw_button">Erase Draw Button</string>
        <string name="options_menu">Options Menu</string>
        <string name="brush_color_button">Brush Color Button</string>
        <string name="dialog_choose_color">Choose brush color</string>
        <string name="dialog_select">Select</string>
        <string name="dialog_negative">Cancel</string>
        <string name="redo_draw_button">Redo Draw Button</string>
        <string name="dialog_choose_brush_size">Choose brush size</string>
        <string name="dialog_choose_eraser_size">Choose eraser size</string>
        <string name="brush_small">Small</string>
        <string name="brush_medium">Medium</string>
        <string name="brush_large">Large</string>
        <string name="arrow_right_button">Arrow Right Button</string>
        <string name="background_image_add">Add image background</string>
        <string name="background_image_clear">Clear image background</string>
        <string name="dialog_background_image">Background image</string>
        <string name="drawing_saved">Drawing saved on Pictures.</string>
        <string name="share_drawing">Share Drawing</string>
        <string name="option_tell_friends">Tell Friends</string>
        <string name="option_about">About</string>
        <string name="option_settings">Settings</string>
        <string name="gallery_not_available">Gallery App not available.</string>
        <string name="settings_theme_light">Light</string>
        <string name="settings_theme_dark">Dark</string>
        <string name="settings_theme_default">System default</string>
        <string name="settings_theme_choose">Choose a theme</string>
        <string name="settings_theme_selected">Theme selected</string>
        <string name="settings_theme">Theme</string>
        <string name="about_app_version">Version 1.0.0</string>
        <string name="about_app_copyright" translatable="false">© 2020 Anibal Ventura</string>
        <string name="about_changelog_title">Changelog</string>
        <string name="about_changelog_v100_title" translatable="false">v 1.0.0</string>
        <string name="about_changelog_v100_content">- First release.</string>
        <string name="dialog_exit">Exit without save?</string>
        <string name="dialog_exit_confirmation">Exit</string>
        <string name="dialog_exit_message">If you exit the app now, your floorplan won\'t be saved.</string>
    </resources>