<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.furnitureParam.FurnitureParamActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="30dp"
        android:text="@string/furniture_dimensions"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="324dp"
        android:layout_height="48dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="Width"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="HardcodedText"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:layout_width="324dp"
        android:layout_height="48dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/length"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumber3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="325dp"
        android:layout_height="48dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="200dp"
        android:ems="10"
        android:hint="@string/height"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/doneBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumber2"
        android:autofillHints="" />

    <Button
        android:id="@+id/doneBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>